--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <div class="footer">
-<p>注：本站为一个基于<a target="_blank" href="http://mahout.apache.org">Mahout</a>的电影推荐系统的练习,速度还很慢！尚待完善...<br/>
-现部署于SAE，为降低云豆消耗，请下载源码在本地安装测试。<br/>
-全部源码在<a target="_blank" href="http://www.github.com/laozhaokun/movie_recommender">Github</a>上。</p>
+<p>注：本站为一个基于<a target="_blank" href="http://mahout.apache.org">Mahout</a>的电影推荐系统的练习。尚待完善...
+现部署于SAE,源码在<a target="_blank" href="http://www.github.com/laozhaokun/movie_recommender">Github</a>。</p>
 	 <dl>
   <dd>
   	<span>相关链接：</span> 
@@ -21,6 +20,8 @@
 	<a target="_blank" href="http://sae.sina.com.cn">SAE</a>
 	|
 	<a target="_blank" href="http://huntinfo.sinaapp.com?movie">水木招聘信息抓取</a>
+	|
+	<a target="_blank" href="http://sentimentclass.sinaapp.com?movie">情感识别</a>
 	|
 	<a href="mailto:zhf.thu@gmail.com">Email</a>
 </dd>
